# scraparse

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
src/scraparse/: __init__.py  __main__.py
src/scraparse/adapters/llm/: base.py  openai_adapter.py
src/scraparse/cli/: flags.py  main.py  schema_editor.py  wizard.py
src/scraparse/core/: errors.py  limits.py  logging.py  models.py  paths.py  script_validation.py  util.py  workspace.py
src/scraparse/engine/: orchestrator.py
src/scraparse/plugins/ai/: prompt_renderer.py  schema_generator.py  script_generator.py
src/scraparse/plugins/discovery/: base.py  crawl.py  listing.py  pagination.py
src/scraparse/plugins/fetchers/: base.py  httpx_fetcher.py
src/scraparse/templates/promptpacks/default/: schema_generator_system_prompt.jinja  schema_generator_user_prompt.jinja  script_generator_system_prompt.jinja  script_generator_user_prompt.jinja
tests/fixtures/: sample.html
tests/integration/: test_fetcher.py  test_orchestrator_smoke.py  test_workspace.py
tests/unit/: test_limits.py  test_listing_discovery.py  test_schema.py  test_script_validation.py
