[project]
name = "scraparse"
version = "0.1.0"
description = "Interactive CLI to generate HTML parsing scripts"
readme = "README.md"
requires-python = ">=3.12.3,<3.13"
authors = [{name = "Giorgi Tarsaidze}]
dependencies = [
  "httpx==0.27.0",
  "jinja2==3.1.4",
  "openai==1.30.0",
  "beautifulsoup4==4.12.3",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.2",
  "mypy==1.11.1",
  "ruff==0.5.5",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
scraparse = "scraparse.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
scraparse = ["templates/**/*.jinja"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
files = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
